--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,4 @@ final_name: cf-smoke-tests
 blobstore:
   provider: s3
   options:
-    bucket_name: cf-smoke-tests
+    bucket_name: cf-smoke-tests-release-bucket
