--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,5 @@ final_name: cf-smoke-tests
 blobstore:
   provider: s3
   options:
+    region: us-west-1
     bucket_name: cf-smoke-tests-release-bucket
