--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,6 +1,8 @@
 cli/cf-cli_6.23.1_linux_x86-64.tgz:
   size: 6692717
+  object_id: 14b7adbd-0b1b-435e-77a3-fd2b1a4b31fb
   sha: a195e99cae5ab17b453b0a0747508c8f3eee5cae
 golang/go1.7.5.linux-amd64.tar.gz:
   size: 84176916
+  object_id: 2690058d-e39b-4ba2-4650-14af3d38da8b
   sha: 7c6902ce8cd3b9963082d748c50df074e4896796
