Smoke tests can be run from Windows machine.
We want this so that Windows-only BOSH deployments can run the CF Smoke Tests.

Note that this change must be paired with the changes from PR #43 in
cloudfoundry/cf-smoke-tests.

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,4 +1,10 @@
+cf-cli_6.39.1_windows_x86-64.zip:
+  size: 6244648
+  sha: 6148f53b68be9aecdefe96a4dcabb399b6f1c89e
 golang/go1.10.3.linux-amd64.tar.gz:
   size: 132489256
   object_id: d1f3967f-06f3-4842-65a4-4eea92d5de2e
   sha: dfa39cac093a7a9c94d25130671ec474d51a2995
+golang/go1.11.windows-amd64.zip:
+  size: 135029074
+  sha: b99364764571a4cc5f6cddb3b88ab2d355ec6701
