Upload new blobs for windows smoke-tests [#160986601]
Signed-off-by: Steve Taylor <staylor@pivotal.io>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,10 +1,12 @@
 cf-cli_6.39.1_windows_x86-64.zip:
-  size: 6244648
-  sha: 6148f53b68be9aecdefe96a4dcabb399b6f1c89e
+  size: 4699116
+  object_id: c15bca51-b24c-4179-671d-4f548530f7c5
+  sha: dd0c024503ce56a1c36495510f0e5e14e3cf61dc
 golang/go1.10.3.linux-amd64.tar.gz:
   size: 132489256
   object_id: d1f3967f-06f3-4842-65a4-4eea92d5de2e
   sha: dfa39cac093a7a9c94d25130671ec474d51a2995
-golang/go1.11.windows-amd64.zip:
-  size: 135029074
-  sha: b99364764571a4cc5f6cddb3b88ab2d355ec6701
+golang/go1.10.3.windows-amd64.zip:
+  size: 139354339
+  object_id: f63df294-0ad2-4b99-5d25-5aae1235f47f
+  sha: bc3500c018b4265f13913e5cb83cc0ac84334779
