add env name for grabbing the smoke_tests password
[#167940862](https://www.pivotaltracker.com/story/show/167940862)

Co-authored-by: Sebastian Vidrio <svidrio@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -154,6 +154,7 @@ jobs:
     params:
       BBL_STATE_DIR: environments/test/bellatrix/bbl-state
       SYSTEM_DOMAIN: bellatrix.cf-app.com
+      CREDHUB_ENV_NAME: bosh-bellatrix-stable
 
 - name: run-smokes-errand
   serial_groups:
