Add job to bump cf-smoke-tests submodule
[#168386944](https://www.pivotaltracker.com/story/show/168386944)

Co-authored-by: Dave Walter <dwalter@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -114,6 +114,21 @@ jobs:
       repository: updated-repository
       rebase: true
 
+- name: bump-cf-smoke-tests
+  public: true
+  plan:
+  - in_parallel:
+    - get: cf-smoke-tests-release
+    - get: runtime-ci
+    - get: cf-smoke-tests
+      trigger: true
+  - task: bump-cf-smoke-tests
+    file: runtime-ci/tasks/bump-cf-smoke-tests/task.yml
+  - put: cf-smoke-tests-release
+    params:
+      repository: updated-cf-smoke-tests-release
+      rebase: true
+
 - name: stable-acquire-pool
   public: true
   serial: true
