Pipeline follow changes for rename "master" to "main"
[#173736483](https://www.pivotaltracker.com/story/show/173736483)

Co-authored-by: Renee Chu <rchu@vmware.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -51,7 +51,7 @@ resources:
   type: git
   icon: github-box
   source:
-    branch: master
+    branch: main
     uri: git@github.com:cloudfoundry/cf-smoke-tests.git
     private_key: ((cf_smoke_tests_readwrite_deploy_key.private_key))
 
