Followup from renaming "master" to "main" on relint-ci-pools
[#173736483](https://www.pivotaltracker.com/story/show/173736483)

Co-authored-by: Renee Chu <rchu@vmware.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -76,7 +76,7 @@ resources:
   icon: pool
   source:
     uri: git@github.com:cloudfoundry/relint-ci-pools
-    branch: master
+    branch: main
     pool: cf-deployment/stable
     private_key: ((relint_ci_pools_readwrite_deploy_key.private_key))
 
