Followup from renaming 'master' to 'main' on runtime-ci
[#173736483](https://www.pivotaltracker.com/story/show/173736483)

Co-authored-by: Renee Chu <rchu@vmware.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -22,7 +22,7 @@ resources:
   type: git
   icon: github-box
   source:
-    branch: master
+    branch: main
     uri: https://github.com/cloudfoundry/runtime-ci.git
 
 # Releases
