--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -55,7 +55,7 @@ resources:
   type: git
   icon: github
   source:
-    branch: master
+    branch: main
     uri: https://github.com/cloudfoundry-incubator/cf-test-helpers
 
 # ENV
