--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -108,7 +108,7 @@ jobs:
     input_mapping:
       repository: cf-smoke-tests
     params:
-      USE_GO_MOD: false
+      USE_GO_MOD: true
       REPOSITORY: cloudfoundry/cf-smoke-tests
   - put: cf-smoke-tests
     params:
