Final release, version 42.0.0.

--- a/releases/cf-smoke-tests/index.yml
+++ b/releases/cf-smoke-tests/index.yml
@@ -45,6 +45,8 @@ builds:
     version: 40.0.109
   145b690b-f29b-4528-7d67-6c7d47bd5b91:
     version: 40.0.73
+  149bd453-32ff-492e-5d8e-59547acd0476:
+    version: 42.0.0
   14acd830-83eb-4a39-51cc-0b4522c3a9de:
     version: 40.0.45
   1514bfcc-2987-4a1c-7754-fe47e84afa9f:
