--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -168,10 +168,6 @@ jobs:
     file: runtime-ci/tasks/bump-cf-smoke-tests/task.yml
     output_mapping:
       updated-cf-smoke-tests-release: cf-smoke-tests-release
-  - task: get-submodule-go-version
-    file: cf-smoke-tests-release/ci/tasks/get-submodule-go-version/task.yml
-  - load_var: go_version
-    file: version/version
   - task: bump-release-go-package
     file: golang-release/ci/tasks/shared/bump-golang-package.yml
     input_mapping:
@@ -179,7 +175,7 @@ jobs:
     output_mapping:
       output_repo: cf-smoke-tests-release
     params:
-      PACKAGES: [golang-((.:go_version))-linux, golang-((.:go_version))-windows]
+      PACKAGES: [golang-1-linux, golang-1-windows]
       PRIVATE_YML: |
         ---
         blobstore:
@@ -187,10 +183,6 @@ jobs:
           options:
             access_key_id: ((cf_release_blobs_buckets_access_key_id))
             secret_access_key: ((cf_release_blobs_buckets_secrect_access_key))
-  - task: bump-release-go-references
-    file: cf-smoke-tests-release/ci/tasks/bump-release-go-references/task.yml
-    params:
-      GO_VERSION: ((.:go_version))
   - put: cf-smoke-tests-release
     params:
       repository: cf-smoke-tests-release
